# makefile_template

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: c_functions.h
include/: c_functions.h  cpp_class.hpp
src/: c_functions.c  cpp_class.cpp  main.cpp
